Integrate admax scripts into ad sections
Added admax script tags to ad sections.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 </head>
 <body>
 
-    <div id="ad-top"><div id="ad-box-1">★</div></div>
-    <div id="ad-bottom"><div id="ad-box-2">★</div></div>
+    <div id="ad-top"><div id="ad-box-1"><!-- admax -->
+<script src="https://adm.shinobi.jp/s/109f7d5b62b7bd9fec709343c923af2b"></script>
+<!-- admax --></div></div>
+    <div id="ad-bottom"><div id="ad-box-2"><!-- admax -->
+<script src="https://adm.shinobi.jp/s/109f7d5b62b7bd9fec709343c923af2b"></script>
+<!-- admax --></div></div>
 
     <div id="startScreen">
         <h1 style="color:#f44336; margin-bottom:10px;">NITRO DRIFT</h1>
